# power-pto

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  setup-environment.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 93c2caa18195_baseline.py
backend/app/: config.py  db.py  exceptions.py  main.py  middleware.py  seed.py  worker.py
backend/app/api/: accruals.py  assignments.py  balances.py  deps.py  employees.py  health.py  holidays.py  policies.py  reports.py  requests.py  router.py
backend/app/models/: __init__.py  assignment.py  audit.py  balance.py  base.py  enums.py  holiday.py  ledger.py  policy.py  request.py
backend/app/schemas/: accrual.py  assignment.py  auth.py  balance.py  employee.py  holiday.py  policy.py  report.py  request.py
backend/app/services/: accrual.py  assignment.py  audit.py  balance.py  carryover.py  company.py  duration.py  employee.py  holiday.py  policy.py  report.py  request.py
backend/tests/: conftest.py  test_accruals.py  test_assignments.py  test_balances.py  test_carryover.py  test_duration.py  test_employees.py  test_health.py  test_holidays.py  test_models.py  test_policies.py  test_reports.py  test_requests.py  test_schemas.py  test_service_stubs.py
docs/: api.md  architecture.md  data-model.md  deployment.md  prd.md  tdd.md
docs/decisions/: adr-0001-ledger-vs-derived.md  adr-0002-policy-versioning.md
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/components/layout/: app-header.tsx  app-sidebar.tsx  root-layout.tsx
frontend/src/components/shared/: category-badge.tsx  confirm-dialog.tsx  data-table.tsx  duration-display.tsx  empty-state.tsx  error-fallback.tsx  loading-skeleton.tsx  page-header.tsx  status-badge.tsx
frontend/src/components/ui/: alert.tsx  avatar.tsx  breadcrumb.tsx  calendar.tsx  chart.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  table.tsx  tabs.tsx  tooltip.tsx
frontend/src/features/assignments/components/: assign-employee-dialog.tsx  assignment-list.tsx
frontend/src/features/assignments/hooks/: use-assignments.ts
frontend/src/features/audit/hooks/: use-audit-log.ts
frontend/src/features/audit/pages/: audit-log-page.tsx
frontend/src/features/balances/components/: balance-card.tsx  balance-radial-chart.tsx  balance-summary-chart.tsx  balance-timeline-chart.tsx  ledger-table.tsx
frontend/src/features/balances/hooks/: use-balances.ts
frontend/src/features/balances/pages/: my-balances-page.tsx
frontend/src/features/dashboard/components/: kpi-cards.tsx  request-status-chart.tsx  (+2 more)
frontend/src/lib/: query-keys.ts
frontend/src/lib/api/: client.ts  endpoints.ts  types.ts
frontend/src/lib/auth/: auth-context.tsx  use-auth.ts
frontend/src/lib/utils/: constants.ts  format.ts
frontend/src/pages/: not-found.tsx  placeholder.tsx
(+26 files in other folders)
