[project]
name = "power-pto-backend"
version = "0.1.0"
description = "Power PTO backend API — employee time-off tracking system"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "psycopg[binary]",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "coverage",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "sqlmodel.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.versions.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
